168927066 chore (app-correction) put the app on the level needed at the bootcamp
